# termdaw

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  bunfig.toml  eslint.config.js  index.tsx  package.json
.github/workflows/: release.yml
.husky/: pre-commit
.tldr/: languages.json
.tldr/cache/: call_graph.json
.tldr/cache/semantic/: index.faiss  metadata.json
existing/: project.json
lofi1/: project.json
new-name/: project.json
plugins/simple-synth/: Cargo.toml
plugins/simple-synth/src/: lib.rs
src/: App.tsx  app.rs  arrangement.rs  audio_sync.rs  browser.rs  command.rs  command_picker.rs  confirm_dialog.rs  coords.rs  cursor.rs  event_log.rs  lib.rs  main.rs  mode.rs  playback.rs  projects_modal.rs  templates.rs
src/audio/: mock.rs  mod.rs  offline.rs
src/components/: Browser.tsx  ChannelRack.tsx  KittyWaveform.tsx  Mixer.tsx  PianoRoll.tsx  Playlist.tsx  Transport.tsx
src/context/: CommandContext.tsx  FocusContext.tsx  ProjectContext.tsx  SequencerContext.tsx
src/effects/: delay.rs  enhancer.rs  filter.rs  mod.rs  reverb.rs  test_helpers.rs
src/history/: command.rs  jumplist.rs  mod.rs  tests.rs
src/hooks/: useAutoSave.ts  useVim.ts
src/input/: browser.rs  channel_rack.rs  common.rs  context.rs  mixer.rs  mod.rs  mouse.rs  piano_roll.rs  playlist.rs  vim.rs  vim_tests.rs
src/lib/: audio.ts  kitty-canvas-demo.ts  synth.ts
src/lib/commands/: Command.ts  CommandManager.ts  index.ts  (+1 more)
src/mixer/: mod.rs  routing.rs
src/plugin_host/: host.rs  loader.rs  mod.rs  params.rs
src/project/: mod.rs  ops.rs
src/sequencer/: mod.rs
src/types/: play-sound.d.ts
src/ui/: areas.rs  browser.rs  channel_rack.rs  colors.rs  command_picker.rs  confirm_dialog.rs  context_menu.rs  effect_editor.rs  envelope.rs  event_log.rs  mixer.rs  mod.rs  piano_roll.rs  playlist.rs  plugin_editor.rs  projects_modal.rs  transport.rs  waveform.rs
templates/default/: project.json
(+28 files in other folders)
