[package]
name = "simple-synth"
version = "0.1.0"
edition = "2021"
description = "A simple polyphonic synthesizer plugin"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
